--- a/style.css
+++ b/style.css
@@ -7,9 +7,13 @@ margin: 0;
 padding: 0;
 
 }
+h1{
+  color: white;
+}
 body{
   height: 100vh;
   overflow: hidden;
+  background-color: black;
 }
 
 .game-container{
@@ -28,21 +32,58 @@ body{
   width: 140px;
   height: 140px;
   border-radius: 20px;
+  border: 1px solid black;
 }
 .greenBox{
   background-color: green;
 }
+.greenBox:hover{
+  cursor: pointer;
+  background-color: darkgreen;
+}
 .redBox{
   background-color: red;
+}
+.redBox:hover{
+  cursor: pointer;
+  background-color: darkred;
 }
 .yellowBox{
   background-color: yellow;
 }
+.yellowBox:hover{
+  cursor: pointer;
+  background-color: darkgoldenrod;
+
+}
 .blueBox{
   background-color: blue;
 }
+.blueBox:hover{
+  cursor: pointer;
+  background-color: darkblue;
+}
 .boxes{
   height:400px;
-  padding: 4px;
-  
+  padding: 8px;
+  background-color: white;
+}
+
+.modal {
+  position: fixed;
+  z-index: 1;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  overflow: auto;
+  background-color: rgba(0, 0, 0, 0.5);
+}
+
+.modal_content {
+  background-color: #fefefe;
+  border-radius: 8px;
+  padding: 20px;
+  width: 50%;
+  height:auto;
 }
