--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@ h1{
 body{
   height: 100vh;
   overflow: hidden;
-  background-color: black;
+  background-color: rgb(39, 38, 38);
 }
 
 .game-container{
@@ -29,9 +29,9 @@ body{
   padding: 40px;
 }
 .greenBox, .redBox, .yellowBox, .blueBox{
-  width: 140px;
-  height: 140px;
-  border-radius: 20px;
+  width: 144px;
+  height: 144px;
+  border-radius: 24px;
   border: 1px solid black;
 }
 .greenBox{
@@ -86,4 +86,9 @@ body{
   padding: 20px;
   width: 50%;
   height:auto;
+}
+
+.Start:hover{
+  cursor: pointer;
+  color: darkgreen;
 }
