--- a/style.css
+++ b/style.css
@@ -40,6 +40,7 @@ body{
 .greenBox:hover{
   cursor: pointer;
   background-color: darkgreen;
+  animation: scaleAnimation 0.3s ease-in-out;
 }
 .redBox{
   background-color: rgb(214, 78, 78);
@@ -47,6 +48,7 @@ body{
 .redBox:hover{
   cursor: pointer;
   background-color: darkred;
+  animation: scaleAnimation 0.3s ease-in-out;
 }
 .yellowBox{
   background-color: rgb(231, 231, 94);
@@ -54,6 +56,7 @@ body{
 .yellowBox:hover{
   cursor: pointer;
   background-color: darkgoldenrod;
+  animation: scaleAnimation 0.3s ease-in-out;
 
 }
 .blueBox{
@@ -62,6 +65,7 @@ body{
 .blueBox:hover{
   cursor: pointer;
   background-color: darkblue;
+  animation: scaleAnimation 0.3s ease-in-out;
 }
 .boxes{
   height:400px;
@@ -91,6 +95,24 @@ body{
 .Start:hover{
   cursor: pointer;
   color: darkgreen;
+
+}
+@keyframes scaleAnimation {
+  0% {
+    transform: scale(1);
+  }
+  25%{
+    transform: scale(0.9);
+  }
+  50% {
+    transform: scale(0.8);
+  }
+  75% {
+    transform: scale(0.9);
+  }
+  100% {
+    transform: scale(1);
+  }
 }
 
 .highlighted{
@@ -109,5 +131,5 @@ body{
 }
 .winning h1{
   font-size: 40px;
-  color: green;
+  color: blue;
 }
